Demo convert file send email
