# cmd/server/main.go
@@ -1,3 +1,4 @@
+//go:generate swag init -g cmd/server/main.go --parseDependency --parseInternal
 package main
 
 import (
@@ -6,15 +7,18 @@ import (
 	"github.com/MinhT933/file-converter/internal/config"
 	fiberSwagger "github.com/arsmn/fiber-swagger/v2"
 	"github.com/gofiber/fiber/v2"
+	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/hibiken/asynq"
+	"log"
 )
 
 // @title           File Converter API
 // @version         1.0
 // @description     Upload & convert files asynchronously via Asynq queue.
-// @contact.name    Your Name
-// @contact.email   you@example.com
-// @host      localhost:8080
+// @contact.name    minht
+// @contact.email   phammanhtoanhht933@gmail.com
+// @host      127.0.0.1:8080
+// @schemes   https
 // @BasePath  /api
 func main() {
 	cfg := config.Load()
@@ -30,9 +34,28 @@ func main() {
 		BodyLimit: cfg.MaxUploadMB * 1024 * 1024,
 	})
 
-	 app.Get("/swagger/*", fiberSwagger.HandlerDefault)
+
+	//thêm
+	app.Use(cors.New(cors.Config{
+	    AllowOrigins: "http://127.0.0.1:8080, http://localhost:8080",
+		AllowMethods:     "GET,POST,PUT,DELETE,OPTIONS",
+		AllowCredentials: true,
+        AllowHeaders:     "Content-Type, Authorization",
+		ExposeHeaders: "Content-Disposition",
+	}))
+
+	app.Use(cors.New()) 
+
+	app.Get("/swagger/*", fiberSwagger.HandlerDefault)
 
 	api.RegisterRoutes(app, cfg, asynqClient)
+
+    log.Fatal(app.ListenTLS(
+    ":8080",
+    "127.0.0.1.pem",
+    "127.0.0.1-key.pem",
+   ))
+
 
 	if err := app.Listen(":" + cfg.PortHTTP); err != nil {
 		panic(err)
