# docs/swagger.json
@@ -1,17 +1,48 @@
 {
+    "schemes": [
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "Upload \u0026 convert files asynchronously via Asynq queue.",
         "title": "File Converter API",
         "contact": {
-            "name": "Your Name",
-            "email": "you@example.com"
+            "name": "minht",
+            "email": "phammanhtoanhht933@gmail.com"
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "127.0.0.1:8080",
     "basePath": "/api",
     "paths": {
+        "/convert/html_pdf": {
+            "post": {
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/pdf"
+                ],
+                "summary": "Convert HTML to PDF",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "HTML file",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
+                        }
+                    }
+                }
+            }
+        },
         "/status/{job_id}": {
             "get": {
                 "summary": "Get job status",
