# internal/api/routes.go
@@ -6,10 +6,6 @@ import (
 	"github.com/hibiken/asynq"
 )
 
-type Handler struct {
-	Cfg         *config.Config
-	AsynqClient *asynq.Client
-}
 
 func RegisterRoutes(app *fiber.App, cfg *config.Config, client *asynq.Client) {
 	h := &Handler{Cfg: cfg, AsynqClient: client}
@@ -17,6 +13,11 @@ func RegisterRoutes(app *fiber.App, cfg *config.Config, client *asynq.Client) {
 	v1 := app.Group("/api")
 	v1.Post("/upload", h.Upload)
 	v1.Get("/status/:job_id", h.Status)
+    
+
+	v1.Post("/convert/html_pdf", h.ConvertHTMLPDF)
+
+	
 }
 
 // Upload       godoc
@@ -25,7 +26,7 @@ func RegisterRoutes(app *fiber.App, cfg *config.Config, client *asynq.Client) {
 // @Param       file formData file true "File to upload"
 // @Success     200 {object} map[string]string
 // @Router      /upload [post]
-func (h *Handler) Upload(c *fiber.Ctx) error { return c.SendString("todo") }
+// func (h *Handler) Upload(c *fiber.Ctx) error { return c.SendString("todo") }
 
 // Status godoc
 // @Summary  Get job status
@@ -33,3 +34,5 @@ func (h *Handler) Upload(c *fiber.Ctx) error { return c.SendString("todo") }
 // @Success  200 {object} map[string]string
 // @Router   /status/{job_id} [get]
 func (h *Handler) Status(c *fiber.Ctx) error { return c.SendString("todo") }
+
+
